--- a/MyLibrary/main/templates/main/index.html
+++ b/MyLibrary/main/templates/main/index.html
@@ -36,8 +36,35 @@
     <div class="hero-overlay">
     <h1>Shiva Kunj Library</h1>
     <h2>A Unique Self Study Point</h2>
-    <h3>Only Few Sheets Are Left<h3>
+   
+  <div class="wave-text">
+    <span style="--i:0">o</span>
+    <span style="--i:1">n</span>
+    <span style="--i:2">l</span>
+    <span style="--i:3">y</span>
+    <span style="--i:4">&nbsp;</span>
+    <span style="--i:5">f</span>
+    <span style="--i:6">e</span>
+    <span style="--i:7">w</span>
+    <span style="--i:8">&nbsp;</span>
+    <span style="--i:9">s</span>
+    <span style="--i:10">h</span>
+    <span style="--i:11">e</span>
+    <span style="--i:12">e</span>
+    <span style="--i:13">t</span>
+    <span style="--i:14">s</span>
+    <span style="--i:15">&nbsp;</span>
+    <span style="--i:16">a</span>
+    <span style="--i:17">r</span>
+    <span style="--i:18">e</span>
+    <span style="--i:19">&nbsp;</span>
+    <span style="--i:20">l</span>
+    <span style="--i:21">e</span>
+    <span style="--i:22">f</span>
+    <span style="--i:23">t</span>
   </div>
+    
+</div>
     
      
   </header>
